cargo-features = ["edition"]

[package]
name = "wasm_dec"
version = "0.0.1"
repository = "https://github.com/commiebstrd/wasm_dec"
authors = ["Spenser Reinhardt <commiebstrd@protonmail.com>"]
edition = "2018"

[[bin]]
name = "wasm_dec"
path = "bin/main.rs"

[lib]
path = "lib.rs"

[dependencies]
log = "^0.4.0"
simplelog = "^0.5.0"
colored = "^1.6"